--- a/src/components/components.css
+++ b/src/components/components.css
@@ -11,7 +11,7 @@ body, html {
   
   section {
     width: 100%;
-    height: 100vh; /* Make each section take full screen height */
+    height: 90vh; /* Make each section take full screen height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +37,7 @@ body, html {
   
   .home {
     height: 100vh; /* Full screen height */
-    background: url('./officeimg.jpg') no-repeat center center/cover;
+    background: url('./bg6.jpg') no-repeat center center/cover;
     color: white; /* Adjust text color for readability */
     position: relative;
   }
@@ -192,7 +192,7 @@ body, html {
   }
   
   .skills-section li {
-    background: #887b7b;
+    background: #737272;
     color: #fff;
     padding: 0.5rem 1rem;
     margin-bottom: 0.5rem;
@@ -200,13 +200,14 @@ body, html {
   }
   
   .work {
-    background: #5e5656;
-    color: #fff;
+    background: #b5b5b5;
+    color: #f4f4f4;
     padding: 4rem 0;
     text-align: center;
   }
   
   .work h2 {
+    color: #444;
     font-size: 2.5rem;
     margin-bottom: 3rem; /* Increase margin for more space below the heading */
     width: 100%;
@@ -240,10 +241,12 @@ body, html {
   }
   
   .work-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px 10px 0 0;
-  }
+  width: 100%;
+  height: auto;
+  max-width: 100px; /* Ensure the images have the same width */
+  max-height: 100px; /* Ensure the images have the same height */
+  margin-bottom: 2rem;
+}
   
   .work-item h4 {
     margin: 1rem 0 0.5rem 0;
@@ -302,55 +305,52 @@ body, html {
   
   .contact {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items:left;
     background-color: #000;
     color: #fff;
     padding: 50px 20px;
   }
   
   .contact-content {
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    gap: 20px; /* Adjust the gap as needed */
+    gap: 1px; /* Adjust the gap as needed */
   }
   
-  .contact-image {
-    flex: 0 0 auto;
-  }
   
   .contact-image img {
-    border-radius: 8px;
-    max-width: 40%;
-    height: 40%;
+    border-radius: 0px;
+    max-width: 60%;
+    height: 60%;
   }
   
   .contact-info {
     max-width: 400px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     text-align: center;
   }
   
   .contact-info h2 {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   
   .contact-name {
-    font-size: 18px;
+    font-size: 20px;
     margin: 5px 0;
   }
   
   .contact-email {
-    font-size: 16px;
+    font-size: 18px;
     margin: 5px 0;
   }
   
   .contact-social {
-    font-size: 14px;
+    font-size: 16px;
     margin: 10px 0;
   }
   
