--- a/src/components/components.css
+++ b/src/components/components.css
@@ -21,7 +21,7 @@ body, html {
 .navbar {
     display: flex;
     justify-content: center;
-    background: #333;
+    background: #1d1c33;
     padding: 1rem;
   }
   
@@ -60,17 +60,18 @@ body, html {
 
   .home-text h1 {
     margin: 0;
+    
   }
   
   .home-text h2 {
     margin: 0;
-    color: #333;
+    color: #909293;
   }
   
   .reach-out-btn {
     padding: 10px 20px;
     font-size: 1rem;
-    background-color: #000;
+    background-color: #51afe9;
     color: #fff;
     border: none;
     border-radius: 5px;
